--- a/site/pages/about-us/social-slice/intro-mobile-tile/styles.css
+++ b/site/pages/about-us/social-slice/intro-mobile-tile/styles.css
@@ -11,7 +11,6 @@
   background: badgerBlack;
   color: badgerWhite;
   padding-left: 0px;
-  width: 100%;
 }
 
 .text{
